--- a/index.html
+++ b/index.html
@@ -2,11 +2,75 @@
 <html lang="en">
 
 <head>
-
+<title> Mini Project</title>
+<link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
+    <!--ini header -->
+<header class="nav-container">
+    <div class ="logo-icon"></div>
+    
+    <nav>
+        <a> Home</a>
+        <a href="#our-profile">our Profile</a>
+        <a> Message Us</a>
+    </nav>
+</header>
+
+<hr />
+
+
+ <main>
+<!-- ini home Content -->
+<section>
+    <header>
+        <h1> Hi User, Welcome to Website</h1>
+    </header>
+
+    <article>
+        <p> ini adalah website portofolio</p>
+
+        <div class="banner-container"> </div>
+    </article>
+</section>
+
+<hr />
+
+<!-- ini Our Profile Content -->
+ <section id="our-profile">
+    <header>
+        <h1> our Profile</h1>
+    </header>
+
+    <article class="profile-content">
+        <div class="profile-item">
+            <div class="profile-icon profile-1"></div>
+        <p> Profile 1</p>
+        </div>
+
+        <div class="profile-item">
+            <div class="profile-icon profile-2"></div>
+        <p> Profile 2</p>
+        </div>
+
+        <div class="profile-item">
+            <div class="profile-icon profile-3"></div>
+        <p> Profile 3</p>
+        </div>
+    </article>
+ </section>
+
+
+
+<!-- ini portoflio content -->
+
+
+
+<!-- ini message us Content -->
+ </main>
+
 
 
 </body>
